# vectoriser-app

./: .gitignore  CMakeLists.txt  DIAGNOSTICS_GUIDE.md  PARAMETER_FIX_SUMMARY.md  README.md  abstract_vectoriser_dual_mode.py  bridged_blob_vectoriser.py  directional_bridged_gui.py  fastvector.cpp  gui_theme.json  last_used_preset.txt  organic_segmentation_gui.py  packages.txt  requirements.txt  tessellated_blob_vectoriser.py  theme_loader.py  vectoriser-app.sln  vectoriser_presets.json
.github/prompts/: plan-organicSegmentationPort.prompt.md
cpp-port/: .gitignore  ARCHITECTURE.md  BridgingService.cpp  BridgingService.h  CMakeLists.txt  COMPLETION_REPORT.md  ContourService.cpp  ContourService.h  GeometryService.cpp  GeometryService.h  IMPLEMENTATION_SUMMARY.md  NativeBridge.cpp  NativeBridge.h  ParameterScaler.cpp  ParameterScaler.h  README.md  SVGWriter.cpp  SVGWriter.h  SegmentationService.cpp  SegmentationService.h  SortingService.cpp  SortingService.h  VectorizationParameters.h  VectorizationPipeline.cpp  VectorizationPipeline.h  build_and_test.bat  main.cpp
csharp-port/: DIAGNOSTICS_IMPLEMENTATION.md  QUICK_DEBUG_STEPS.md
csharp-port/OrganicVectoriser/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  OrganicVectoriser.csproj  vectoriser_presets.json
csharp-port/OrganicVectoriser/Converters/: BoolToVisibilityConverter.cs
csharp-port/OrganicVectoriser/Models/: ModifierFlags.cs  ParameterSet.cs  PipelineResult.cs
csharp-port/OrganicVectoriser/Services/: ContourService.cs  DiagnosticsService.cs  DropletService.cs  ImageService.cs  NativePipelineService.cs  NoiseGenerator.cs  PipelineService.cs  PresetService.cs  RenderService.cs  SvgExportService.cs
csharp-port/OrganicVectoriser/ViewModels/: BaseViewModel.cs  MainViewModel.cs
csharp-port/OrganicVectoriser/ViewModels/Commands/: AsyncRelayCommand.cs  RelayCommand.cs
obsolete/: abstract_vectoriser.py  abstract_vectoriser_edge_aware.py  directional_bridged_blob_vectoriser.py  directional_bridged_blob_vectoriser_gui.py  organic_segmentation_gui_Cfunctions.py  organic_segmentation_gui_kivy.py  organic_segmentation_gui_streamlit.py  quantised_directional_bridged_blob_vectoriser.py  smooth_bridged_blob_vectoriser.py
